--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
   
     <body>
-      <h1>jack</h1>
+      <h1>jenny</h1>
       <h2><a href="https://github.com/jennyking0805">Github</a></h2>
     </body>
     </html>
